force-app/main/default/objects/Product2/fields/AppAdmin_API_Name__c.field-meta.xml
<CustomField>
    <fullName>AppAdmin_API_Name__c</fullName>
    <description>Name of Boolean to turn feature on/off in appAdmin.</description>
    <inlineHelpText>Name of Boolean to turn feature on/off in appAdmin.</inlineHelpText>
    <label>AppAdmin API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>