force-app/main/default/objects/Product2/fields/AppAdminProductKey__c.field-meta.xml
<CustomField>
    <fullName>AppAdminProductKey__c</fullName>
    <description>Used as the key for the AppAdmin Products API.</description>
    <label>AppAdminProductKey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SRP</fullName>
            </value>
            <value>
                <fullName>SRR</fullName>
            </value>
            <value>
                <fullName>SRC</fullName>
            </value>
            <value>
                <fullName>SRSR</fullName>
            </value>
            <value>
                <fullName>SRSC</fullName>
            </value>
            <value>
                <fullName>HG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>