force-app/main/default/objects/Product2/fields/Contract_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Display_Name__c</fullName>
    <label>Contract Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>