force-app/main/default/objects/Product2/fields/Default_Co_Terminate__c.field-meta.xml
<CustomField>
    <fullName>Default_Co_Terminate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets the default for co-termination on the related Opportunity Products.  Can be overridden at the Opportunity Product level.</description>
    <inlineHelpText>Sets the default for co-termination on the related Opportunity Products.  Can be overridden at the Opportunity Product level.</inlineHelpText>
    <label>Default Co-Terminate</label>
    <type>Checkbox</type>
</CustomField>