force-app/main/default/objects/Product2/fields/Default_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Default_Contract_Term__c</fullName>
    <description>If Inherit Opportunity Contract Terms is false, the Contract Term will be set on the Opportunity Product to (Default Contract Term + Product Number of Free Months) and reset to this value when an Opportunity contract term change is made. For month-to-month products.</description>
    <inlineHelpText>If Inherit Opportunity Contract Terms is false, the Contract Term will be set on the Opportunity Product to (Default Contract Term + Product Number of Free Months) and reset to this value when an Opportunity contract term change is made.</inlineHelpText>
    <label>Default Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>