force-app/main/default/objects/Product2/fields/Default_Renewal_Rule__c.field-meta.xml
<CustomField>
    <fullName>Default_Renewal_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides the Default Renewal Rule for this Product. Will be set on Opportunity Products.</description>
    <inlineHelpText>Provides the Default Renewal Rule for this Product. Will be set on Opportunity Products.</inlineHelpText>
    <label>Default Renewal Rule</label>
    <referenceTo>RecurSoft__Renewal_Rule__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>