force-app/main/default/objects/Product2/fields/IsEvergreen__c.field-meta.xml
<CustomField>
    <fullName>IsEvergreen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for setting the related Product Subscription record type to Evergreen for repeated billing.</description>
    <inlineHelpText>Used for setting the related Product Subscription record type to Evergreen for repeated billing.</inlineHelpText>
    <label>IsEvergreen</label>
    <type>Checkbox</type>
</CustomField>