force-app/main/default/objects/Product2/fields/Product_Code_Duplicates_Are_Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Duplicates_Are_Not_Allowed__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Product Code Duplicates Are Not Allowed</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>