force-app/main/default/objects/Product2/fields/RecurSoft__Aggregated_Monthly_Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Aggregated_Monthly_Minimum_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The usage for this product is billed based on Aggregated Monthly Minimum Amount logic.</inlineHelpText>
    <label>Aggregated Monthly Minimum Amount</label>
    <type>Checkbox</type>
</CustomField>