force-app/main/default/objects/Product2/fields/RecurSoft__Billing_Automation__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Billing_Automation__c</fullName>
    <inlineHelpText>Auto: automated process of invoicing  
Manual: manual process of invoicing.
Off: neither automated, not manual processes will pick up the product for invoicing.</inlineHelpText>
    <label>Billing Automation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>