force-app/main/default/objects/Product2/fields/RecurSoft__Billing_dependent_on_imp_stat__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Billing_dependent_on_imp_stat__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Products invoicing will be on hold, until the implementation date/activation date is populated on the opportunity/opportunity product/product subscription.</inlineHelpText>
    <label>Billing dependent on IMP status</label>
    <type>Checkbox</type>
</CustomField>