force-app/main/default/objects/Product2/fields/RecurSoft__Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Billing_Frequency__c</fullName>
    <inlineHelpText>The frequency at which customer is invoiced.</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-annual</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Milestones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>