force-app/main/default/objects/Product2/fields/RecurSoft__Default_number_of_periods__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Default_number_of_periods__c</fullName>
    <label>Deprecated - Default number of periods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>