force-app/main/default/objects/Product2/fields/RecurSoft__Earned_revenue_based_on__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Earned_revenue_based_on__c</fullName>
    <inlineHelpText>Usage based revenue tracked and earned based on the Contractual Quantity or Contractual $Amount.</inlineHelpText>
    <label>Earned Revenue Based On</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RecurSoft__Usage_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>