force-app/main/default/objects/Product2/fields/RecurSoft__Intacct_UOM_dropdown__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_UOM_dropdown__c</fullName>
    <description>Note: existing field &quot;Intacct_UOM__c&quot; has type text and is used in the following Formula Fields: 
OpportunityLineItem.Intacct_UOM
Product_Subscription.Price_Based_On_Formula</description>
    <inlineHelpText>Corresponding unit of measure (UOM) defined in Intacct.</inlineHelpText>
    <label>Intacct UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>