force-app/main/default/objects/Product2/fields/RecurSoft__Invoice_grouping__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Invoice_grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Consolidates billing schedules/usage records with the same item into one line item on an invoice.</inlineHelpText>
    <label>Invoice line grouping</label>
    <type>Checkbox</type>
</CustomField>