force-app/main/default/objects/Product2/fields/RecurSoft__Invoicing_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Invoicing_Date__c</fullName>
    <description>This field determines the invoice dates from the revenue schedule entries.
Added after discussion with Nik on invoice date calculus.</description>
    <inlineHelpText>Determines the date of the billing schedules.</inlineHelpText>
    <label>Invoicing Date</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RecurSoft__Billing_Frequency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>First day of the month</fullName>
            </value>
            <value>
                <fullName>Last day of the month</fullName>
            </value>
            <value>
                <fullName>Based on contract start date</fullName>
                <default>true</default>
                <label>Based on contract start date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>