force-app/main/default/objects/Product2/fields/RecurSoft__Is_Commissionable__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Is_Commissionable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if a product is commissionable or not.</description>
    <inlineHelpText>Check this box if the product is eligible for commission.</inlineHelpText>
    <label>Is Commissionable</label>
    <type>Checkbox</type>
</CustomField>