force-app/main/default/objects/Product2/fields/RecurSoft__Number_of_Revenue_Installments__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Number_of_Revenue_Installments__c</fullName>
    <inlineHelpText>Used to be Number of Revenue Installments</inlineHelpText>
    <label>DepNumber of Accrual Transaction Periods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>