force-app/main/default/objects/Product2/fields/RecurSoft__Overage_automation__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Overage_automation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If On - Overage (difference between the invoiced amount and the actual usage amount to be earned) is handled automatically, with the system creating billable usage records.
If Off - Overage is handled manually.</inlineHelpText>
    <label>Overage automation</label>
    <type>Checkbox</type>
</CustomField>