force-app/main/default/objects/Product2/fields/RecurSoft__Product_Based_On__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Product_Based_On__c</fullName>
    <inlineHelpText>Determines the pricing based on each unit, vs tiered or bracketed pricing.</inlineHelpText>
    <label>Products Price Based On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tiers - Usage</fullName>
            </value>
            <value>
                <fullName>Brackets - Usage</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>