force-app/main/default/objects/Product2/fields/RecurSoft__Product_Family_Code__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Product_Family_Code__c</fullName>
    <inlineHelpText>Optional field that may be used to group items on reports.</inlineHelpText>
    <label>Product Family Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COD</fullName>
            </value>
            <value>
                <fullName>FHBU</fullName>
            </value>
            <value>
                <fullName>FHCB</fullName>
            </value>
            <value>
                <fullName>FHCU</fullName>
            </value>
            <value>
                <fullName>FHPB</fullName>
            </value>
            <value>
                <fullName>HHB</fullName>
            </value>
            <value>
                <fullName>HMOW</fullName>
            </value>
            <value>
                <fullName>HPB</fullName>
            </value>
            <value>
                <fullName>FHPU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>