force-app/main/default/objects/Product2/fields/RecurSoft__Prorated__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Prorated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prorated</label>
    <type>Checkbox</type>
</CustomField>