force-app/main/default/objects/Product2/fields/RecurSoft__Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Purchase_Price__c</fullName>
    <inlineHelpText>Price at which product being sold was initially purchased.</inlineHelpText>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>