force-app/main/default/objects/Product2/fields/RecurSoft__Requires_Contract_Information__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Requires_Contract_Information__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Contract Information</label>
    <type>Checkbox</type>
</CustomField>