force-app/main/default/objects/Product2/fields/RecurSoft__Rev_Installments_Period__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Rev_Installments_Period__c</fullName>
    <label>Rev Installments Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RecurSoft__Revenue_Recognition_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-annual</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Milestones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>