force-app/main/default/objects/Product2/fields/RecurSoft__Rev_Rec_End_Based_On__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Rev_Rec_End_Based_On__c</fullName>
    <inlineHelpText>Controls the default behavior for the Revenue Recognition End Date on the billing schedules.</inlineHelpText>
    <label>Rev Rec End Based On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Schedule Entry</fullName>
                <default>true</default>
                <label>Revenue Schedule Entry</label>
            </value>
            <value>
                <fullName>Contract Term End Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>