force-app/main/default/objects/Product2/fields/RecurSoft__Rev_Rec_Off_set_config__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Rev_Rec_Off_set_config__c</fullName>
    <inlineHelpText>Determines whether the Rev Rec Off-Set value applies to the first billing schedule entry or to all entries.</inlineHelpText>
    <label>Rev Rec Off-set config</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>applies to first period</fullName>
                <default>true</default>
                <label>applies to first period</label>
            </value>
            <value>
                <fullName>applies to all periods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>