force-app/main/default/objects/Product2/fields/RecurSoft__Rev_Rec_Start__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Rev_Rec_Start__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Use this field to determine the number of days of delay that the Rev Rec should have compared to the Contract Term Start Date.</description>
    <inlineHelpText>Defers (in days) the Rev Rec Start Date for the first schedule or all schedules.</inlineHelpText>
    <label>Rev Rec Start Off-Set Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>