force-app/main/default/objects/Product2/fields/RecurSoft__Rev_Rec_Start_Off_Set_Month__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Rev_Rec_Start_Off_Set_Month__c</fullName>
    <inlineHelpText>Defers (in months) the Rev Rec Start Date for the first schedule or all schedules.</inlineHelpText>
    <label>Rev Rec Start Off-Set Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>