force-app/main/default/objects/Product2/fields/RecurSoft__Rev_Rec_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Rev_Rec_Template_Name__c</fullName>
    <inlineHelpText>Corresponding template defined in Intacct.</inlineHelpText>
    <label>Revenue Recognition Template Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RecurSoft__Revenue_Recognition_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>12 Months Period</fullName>
            </value>
            <value>
                <fullName>Contract Term</fullName>
                <default>true</default>
                <label>Contract Term</label>
            </value>
            <value>
                <fullName>Contract Term1</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Services - Upon Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>