force-app/main/default/objects/Product2/fields/RecurSoft__Revenue_Recognition_Method__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Revenue_Recognition_Method__c</fullName>
    <label>Revenue Recognition Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RecurSoft__Billing_Frequency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Transaction</fullName>
            </value>
            <value>
                <fullName>Revenue Recognition Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>