force-app/main/default/objects/Product2/fields/RecurSoft__Revenue_Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Revenue_Schedule_Type__c</fullName>
    <inlineHelpText>Determines  whether the Product Price will be repeated on all periods, or the Product price will be equally split across all periods.</inlineHelpText>
    <label>Billing Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Repeat Amount for Each Installment</fullName>
                <default>true</default>
                <label>Repeat Amount for Each Installment</label>
            </value>
            <value>
                <fullName>Divide Amount into multiple installments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>