force-app/main/default/objects/Product2/fields/RecurSoft__Sort_By__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Sort_By__c</fullName>
    <inlineHelpText>Sorts the order of line items on the Intacct invoice.</inlineHelpText>
    <label>Sort By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>