force-app/main/default/objects/Product2/fields/RecurSoft__Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Usage_Type__c</fullName>
    <inlineHelpText>Determines the pricing calculation of usage records.</inlineHelpText>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RecurSoft__Product_Based_On__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Period</fullName>
            </value>
            <value>
                <fullName>Cumulative</fullName>
            </value>
            <value>
                <fullName>Usage only</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Aggregated Monthly Minimum Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>