force-app/main/default/objects/Product2/fields/RecurSoft__Vendor__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vendor relationship for Purchase Orders</description>
    <label>Vendor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>RecurSoft_Products</relationshipName>
    <type>Lookup</type>
</CustomField>