force-app/main/default/objects/Product2/fields/RecurSoft__Warehouse__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Warehouse__c</fullName>
    <inlineHelpText>Maps to the Intacct warehouse.</inlineHelpText>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>