force-app/main/default/objects/Product2/fields/RecurSoft__Yearly_Special_Behavior__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Yearly_Special_Behavior__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used for those products with Installment Period set to Yearly that have a different behavior.</description>
    <label>Deprecated - Yearly Special Behavior</label>
    <type>Checkbox</type>
</CustomField>