force-app/main/default/objects/Product2/fields/SFDCBaseURL__c.field-meta.xml
<CustomField>
    <fullName>SFDCBaseURL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_300))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFDCBaseURL</label>
    <type>Text</type>
</CustomField>