force-app/main/default/objects/Product2/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <formula>CASE( Family , 
						&quot;SR Platform&quot;, 1, 
						2
					)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>