force-app/main/default/objects/Product2/fields/Standard_Pricebook_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Standard_Pricebook_Entry_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Standard Pricebook Entry Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>