force-app/main/default/objects/Product2/validationRules/RecurSoft__Billing_Frequency_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurSoft__Billing_Frequency_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    $Setup.RecurSoft__Deactivate_ISB_validations__c.RecurSoft__Is_active__c, false, 
    ISBLANK(TEXT(RecurSoft__Billing_Frequency__c))
)</errorConditionFormula>
    <errorDisplayField>RecurSoft__Billing_Frequency__c</errorDisplayField>
    <errorMessage>Please select a value for Billing Frequency.</errorMessage>
</ValidationRule>