force-app/main/default/objects/Product2/validationRules/RecurSoft__Intacct_UOM_required.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurSoft__Intacct_UOM_required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    $Setup.RecurSoft__Deactivate_ISB_validations__c.RecurSoft__Is_active__c, false, 
    ISBLANK(TEXT(RecurSoft__Intacct_UOM_dropdown__c))
)</errorConditionFormula>
    <errorDisplayField>RecurSoft__Intacct_UOM_dropdown__c</errorDisplayField>
    <errorMessage>Please select a value for Intacct UOM.</errorMessage>
</ValidationRule>