force-app/main/default/objects/Product2/validationRules/RecurSoft__Invoicing_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurSoft__Invoicing_Date_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    $Setup.RecurSoft__Deactivate_ISB_validations__c.RecurSoft__Is_active__c, false, 
    ISBLANK(TEXT(RecurSoft__Invoicing_Date__c))
)</errorConditionFormula>
    <errorDisplayField>RecurSoft__Invoicing_Date__c</errorDisplayField>
    <errorMessage>Please select a value for Invoicing Date.</errorMessage>
</ValidationRule>