force-app/main/default/objects/Product2/validationRules/RecurSoft__MilestonesRevenueTransaction.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurSoft__MilestonesRevenueTransaction</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    $Setup.RecurSoft__Deactivate_ISB_validations__c.RecurSoft__Is_active__c, false, 
    AND(
        ISPICKVAL(RecurSoft__Billing_Frequency__c, &#39;Milestones&#39;),
        OR(
          ISPICKVAL(RecurSoft__Rev_Installments_Period__c, &#39;Milestones&#39;),
          ISPICKVAL(RecurSoft__Rev_Installments_Period__c, &#39;One-Time&#39;),
          ISPICKVAL(RecurSoft__Rev_Installments_Period__c, &#39;Monthly&#39;),
          ISPICKVAL(RecurSoft__Rev_Installments_Period__c, &#39;Quarterly&#39;),
          ISPICKVAL(RecurSoft__Rev_Installments_Period__c, &#39;Semi-annual&#39;),
          ISPICKVAL(RecurSoft__Rev_Installments_Period__c, &#39;Yearly&#39;)
        ),
        ISPICKVAL(RecurSoft__Revenue_Recognition_Method__c, &#39;Revenue Transaction&#39;)
    )
)</errorConditionFormula>
    <errorMessage>Revenue transaction recognition method with  &#39;Milestones&#39; billing frequency can not be selected with any installments periods.</errorMessage>
</ValidationRule>