force-app/main/default/objects/Product2/validationRules/RecurSoft__MilestonesWithRevRecMethod.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurSoft__MilestonesWithRevRecMethod</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    $Setup.RecurSoft__Deactivate_ISB_validations__c.RecurSoft__Is_active__c, false, 
    AND(
        ISPICKVAL(RecurSoft__Billing_Frequency__c, &#39;Milestones&#39;),
        ISPICKVAL(RecurSoft__Revenue_Recognition_Method__c, &#39;Revenue Transaction&#39; )
    )
)</errorConditionFormula>
    <errorMessage>Revenue Transaction recognition method cannot be selected with Milestones billing frequency.</errorMessage>
</ValidationRule>