force-app/main/default/objects/Product2/validationRules/RecurSoft__One_time_installments_for_yearly_freq.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurSoft__One_time_installments_for_yearly_freq</fullName>
    <active>true</active>
    <description>Validates that when Rev Installments Period=One-Time, then Billing Frequency cannot equal Yearly</description>
    <errorConditionFormula>IF(
    $Setup.RecurSoft__Deactivate_ISB_validations__c.RecurSoft__Is_active__c, false, 
    AND(
         ISPICKVAL(RecurSoft__Billing_Frequency__c, &quot;Yearly&quot; ),
         ISPICKVAL(RecurSoft__Rev_Installments_Period__c, &quot;One-Time&quot;)
    )
)</errorConditionFormula>
    <errorMessage>When Rev Installments Period is One-Time, then Billing Frequency cannot be Yearly.</errorMessage>
</ValidationRule>