force-app/main/default/objects/Product2/validationRules/RecurSoft__Product_Code_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurSoft__Product_Code_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    $Setup.RecurSoft__Deactivate_ISB_validations__c.RecurSoft__Is_active__c, false, 
    ISBLANK(ProductCode)
)</errorConditionFormula>
    <errorDisplayField>ProductCode</errorDisplayField>
    <errorMessage>Please select a value for the Product Code.</errorMessage>
</ValidationRule>