force-app/main/default/objects/Product2/validationRules/RecurSoft__Products_Price_Based_On_required.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurSoft__Products_Price_Based_On_required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    $Setup.RecurSoft__Deactivate_ISB_validations__c.RecurSoft__Is_active__c, false, 
    ISBLANK(TEXT(RecurSoft__Product_Based_On__c))
)</errorConditionFormula>
    <errorDisplayField>RecurSoft__Product_Based_On__c</errorDisplayField>
    <errorMessage>Please select a value for Product Price Based On.</errorMessage>
</ValidationRule>